--- a/os/linux/命令/常用操作命令.md
+++ b/os/linux/命令/常用操作命令.md
@@ -1,8 +1,24 @@
-*  查找指定目录包含指定内容的文件 find . -name "*.*"|xargs grep 'MALDIVES_DB_HOST_R' 或者 grep -r "MALDIVES_DB_HOST_R" .
+* 查找指定目录包含指定内容的文件 
 
-* nc拷贝文件 例： 远程机: nc -l 321 > nginx.tgz 本地： nc 10.30.65.154 321 < nginx.tgz
+  ```
+  find . -name "*.*"|xargs grep 'MALDIVES_DB_HOST_R'
+  ```
+  或者 
+  ```
+  grep -r "MALDIVES_DB_HOST_R" .
+  ```
 
-* souce或者.命令执行shell程序是在当前shell进行，而直接运行一个shell程序则是打开一个新的shell，当执行完后退出这个shell。
+* nc拷贝文件 
+例： 远程机:
+```
+ nc -l 321 > nginx.tgz
+```
+ 本地：
+ ```
+ nc 10.30.65.154 321 < nginx.tgz
+ ```
+
+* source或者.命令执行shell程序是在当前shell进行，而直接运行一个shell程序则是打开一个新的shell，当执行完后退出这个shell。
 
 * 查找一个文件的以空格为分割的第一列
 
