--- a/好资源.md
+++ b/好资源.md
@@ -1,5 +1,8 @@
-程序员技能图谱 https://github.com/TeamStuQ/skill-map
+## 浏览器使用统计
 
+https://www.w3counter.com/#stats
+
+程序员技能图谱 https://github.com/TeamStuQ/skill-map
 http://blog.sina.com.cn/s/blog_a6f9a3b601014cqz.html
 
 http://www.ruanyifeng.com/blog/2013/10/register.html
