--- a/好资源.md
+++ b/好资源.md
@@ -1,6 +1,3 @@
-## 浏览器使用统计
-
-https://www.w3counter.com/#stats
 
 程序员技能图谱 https://github.com/TeamStuQ/skill-map
 http://blog.sina.com.cn/s/blog_a6f9a3b601014cqz.html
@@ -13,6 +10,7 @@ https://tool.lu/c/hr
 
 ## 前端资源
 
+* https://www.w3counter.com/#stats 浏览器使用统计
 * https://www.awesomes.cn/
 * Front End Interview Question
 * 这个字体好看：https://www.alexkras.com/simple-guide-to-finding-a-javascript-memory-leak-in-node-js/?spm=5176.blog33342.yqblogcon1.30.niq5dT#heapdump
