--- a/courses/计算机色彩.md
+++ b/courses/计算机色彩.md
@@ -42,6 +42,14 @@
 >
 > 该颜色用RGB表示就是 RGB(255, 255, 0)， RGB是英语红、绿、蓝首字母的缩写，括号里逗号分隔的数字依次为红、绿、蓝
 
+是利用[阴极](https://zh.wikipedia.org/wiki/陰極)电子枪发射[电子](https://zh.wikipedia.org/wiki/電子)，在[阳极](https://zh.wikipedia.org/wiki/陽極)高压的作用下，射向荧光屏，使荧光粉发光，同时电子束在偏转磁场的作用下，作上下左右的移动来达到扫描的目的。早期的阴极射线管仅能显示光线的强弱，展现黑白画面。而彩色阴极射线管具有红色、绿色和蓝色三支电子枪，三支电子枪同时发射电子打在荧幕玻璃上[磷](https://zh.wikipedia.org/wiki/磷)化物上来显示颜色。
+
+
+
+液晶显示器原理： https://www.zhihu.com/question/276397150#:~:text=%E8%83%8C%E5%85%89%E6%BA%90%EF%BC%88%E7%81%AF%E7%AE%A1%EF%BC%89%E5%B0%84%E5%87%BA,%E5%BD%A2%E6%88%90%E4%B8%B0%E5%AF%8C%E5%A4%9A%E5%BD%A9%E7%9A%84%E5%9B%BE%E5%83%8F%E3%80%82
+
+
+
 
 
 ## 看看BY的色盘
