--- a/web/依浏览器市场份额对H5应用进行兼容性测试(移动端).md
+++ b/web/依浏览器市场份额对H5应用进行兼容性测试(移动端).md
@@ -33,8 +33,11 @@ Android和iOS 是移动端的主流操作系统，以下仅考察这两个平台
 
 ### 确定兼容性范围
 
-* 首先确定H5应用的用户群体主流 Andorid手机型号范围，然后确定**厂商操作系统**（定制了Android OS）版本范围，进而查出**厂商操作系统**不同版本搭载的相应内置浏览器版本范围，然后进行兼容性开发和测试。
+* 首先确定H5应用的用户群体主流 Andorid手机型号范围，然后确定**厂商操作系统**（定制了Android OS）版本范围，进而查出**厂商操作系统**哥版本搭载的相应内置浏览器版本范围（实际取取最低版进行兼容），然后进行兼容性开发和测试。
+
+  > Android手机厂商繁杂，其内置的定制浏览器也繁杂多样，通过 [Mobile Vendor Market Share](https://gs.statcounter.com/vendor-market-share/mobile) 确定硬件流行度。
 * 如果H5应用运行在指定的App宿主下，如运行在**微信**里，则需要首先根据微信的版本流行度，确定要测试的微信版本范围，从而确定各版本内部对应搭载的 Webview 名称和版本，然后进行兼容性开发和测试。
+
 * 如果用户使用了自行安装的浏览器访问H5应用，通常只能在系统运营阶段收集用户的浏览器信息，然后进行补充兼容性开发和测试
 
 ## iOS
@@ -52,7 +55,7 @@ iOS是Apple拥有独家版权的移动操作系统，内嵌的浏览器是Safari
 
 ### 确定兼容性范围
 
-* 通过 https://ga.statcounter.com/ 首先根据iPhone等设备不同版本的流行度，确定要兼容的硬件范围，从而计算出 iOS 版本，进而推导出明确的safari版本范围，然后进行兼容性开发和测试。
+* 首先，从 [iOS Version Market Share@statcounter](https://gs.statcounter.com/os-version-market-share/ios/mobile-tablet/worldwide) 分析iOS 版本流行度，确定兼容的iOS版本范围（对应的iPhone设备也就基本确定），进而确定了搭载的Safari版本范围，然后进行兼容性开发和测试。
 
 * 如果H5应用运行在指定的App宿主下，如运行在iOS微信里，则需要首先根据微信的版本流行度，确定要测试的微信版本范围，从而确定各版本内部对应搭载的 Webview 名称和版本，然后进行兼容性开发和测试。
 * 如果用户使用了自行安装的浏览器访问H5应用，通常只能在系统运营阶段收集用户的浏览器信息，然后进行补充兼容性开发和测试
