--- a/好资源.md
+++ b/好资源.md
@@ -1,4 +1,4 @@
-
+[toc]
 程序员技能图谱 https://github.com/TeamStuQ/skill-map
 http://blog.sina.com.cn/s/blog_a6f9a3b601014cqz.html
 
@@ -66,8 +66,7 @@ https://blog.csdn.net/u010402786/article/details/51435735
 * HiredInTech’s System Design Section：一份伟大的系统设计面试指南；
 * Coderust：只要 49 美元，对于任何编程语言都能找到解决方案并且附带可视化图表；
 * Reddit’s How to Prepare for Tech Interviews：我经常以此作为我面试的基准；
-
-## <<Coding Theory and Applications>>
+* Coding Theory and Applications
 
 http://www.freebookcentre.net/ComputerScience-Books-Download/Coding-Theory-and-Applications.html
 
